@@ -50,7 +50,7 @@ public class GlowConPoint extends GlowArrayElem {
 
     public GlowConPoint(GrowCmn cmn) {
 	this.cmn = cmn;
-	p = new GlowPoint(cmn);
+	p = new GlowPoint();
 	trf = new GlowTransform();
     }
 
@@ -62,23 +62,23 @@ public class GlowConPoint extends GlowArrayElem {
 	try {
 	    while( (line = reader.readLine()) != null) {
 		token = new StringTokenizer(line);
-		int key = new Integer(token.nextToken()).intValue();
+		int key =Integer.valueOf(token.nextToken());
 		if ( cmn.debug) System.out.println( "GlowConPoint : " + line);
 
 		switch ( key) {
 		case Glow.eSave_ConPoint: 
 		    break;
 		case Glow.eSave_ConPoint_number:
-		    number = new Integer(token.nextToken()).intValue();
+		    number =Integer.valueOf(token.nextToken());
 		    break;
 		case Glow.eSave_ConPoint_direction:
-		    number = new Integer(token.nextToken()).intValue();
+		    number =Integer.valueOf(token.nextToken());
 		    break;
 		case Glow.eSave_ConPoint_p:
 		    p.open(reader);
 		    break;
 		case Glow.eSave_ConPoint_trace_attr_type:
-		    trace_attr_type = new Integer(token.nextToken()).intValue();
+		    trace_attr_type =Integer.valueOf(token.nextToken());
 		    break;
 		case Glow.eSave_ConPoint_trace_attribute:
 		    if ( token.hasMoreTokens())
