@@ -53,7 +53,7 @@ public class GlowNodeGroup extends GlowNodeClass {
 	try {
 	    while( (line = reader.readLine()) != null) {
 		token = new StringTokenizer(line);
-		int key = new Integer(token.nextToken()).intValue();
+		int key = Integer.valueOf(token.nextToken());
 		if ( cmn.debug) System.out.println( "GlowNodeGroup : " + line);
 
 		switch ( key) {
